test/cases/compile_errors/stage1/obj/switch_with_overlapping_case_ranges.zig
export fn entry() void {
    var q: u8 = 0;
    switch (q) {
        1...2 => {},
        0...255 => {},
    }
}

// error
// backend=stage1
// target=native
//
// tmp.zig:5:9: error: duplicate switch value
